argocd/applications/argocd/overlays/argocd-image-updater-namespace-delete.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-image-updater-system
$patch: delete
