argocd/applications/argocd/overlays/argocd-applicationset-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-applicationset-controller
spec:
  replicas: 1
