argocd/applications/argocd/overlays/argocd-image-updater-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater-controller
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: argocd-image-updater-controller
          args:
            - --metrics-bind-address=:8443
            - run
            - --leader-election=false
            - --max-concurrent-apps=2
