argocd/applications/argocd/overlays/argocd-lovely-plugin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-lovely-plugin
spec:
  template:
    spec:
      containers:
        - name: lovely-plugin
          # Choose your image here - see https://github.com/crumbhole/argocd-lovely-plugin/blob/main/doc/variations.md
          image: ghcr.io/crumbhole/lovely:1.2.5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            # Import the repo-server's plugin binary
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
              # Starting with v2.4, do NOT mount the same tmp volume as the repo-server container. The filesystem separation helps
              # mitigate path traversal attacks.
            - mountPath: /tmp
              name: lovely-tmp
      volumes:
        # A temporary directory for the tool to work in.
        - emptyDir: {}
          name: lovely-tmp
