argocd/applications/argocd/overlays/argocd-redis-ha-haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis-ha-haproxy
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
